# clean_slate_pa

./: .gitignore  .pre-commit-config.yaml  Makefile  Procfile  README.md  pyproject.toml  railway.json  requirements.txt
.devcontainer/: devcontainer.json  postCreateCommand.sh
.github/: CODEOWNERS
.github/workflows/: bump_version.yml  ci_pipeline.yml  create_release.yml
src/pa_record_retriever/: __init__.py  case_filings.py  court_summaries.py  models.py  requests.py
src/pa_record_retriever/grammars/: common_pleas.peg  magisterial_district.peg
src/pa_record_retriever/parsimonious/: grammar.py  models.py  nodes.py
src/pa_record_retriever/pypdf/: enum.py  models.py  reader.py
src/pa_ujs_document_parser/: __init__.py  case_filings.py  court_summaries.py  models.py  pydantic.py  requests.py
src/pa_ujs_document_parser/grammars/: shared.peg
src/pa_ujs_document_parser/parsimonious/: grammar.py  models.py  nodes.py
src/pa_ujs_document_parser/pypdf/: models.py  reader.py
tests/: test_case_filings.py  test_court_summaries.py  test_models.py  test_pydantic.py  test_requests.py
tests/parsimonious/: test_grammar.py  test_models.py  test_nodes.py
tests/pypdf/: test_enum.py  test_models.py  test_reader.py
webapp/: README.md  eligibility.py  main.py  requirements.txt
webapp/static/: style.css
webapp/templates/: index.html
