[project]
name = "pa-record-retriever"
version = "0.1.0"
description = "A Python library for fetching and parsing public court records from the Pennsylvania Unified Judicial System (UJS) portal."
authors = [
    {name = "Tyler Richardett", email = "tyler@freeourvote.org"},
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "httpx>=0.28.1",
    "justhtml>=1.7.0",
    "loguru>=0.7.2",
    "numpy>=2.4.2",
    "parsimonious>=0.10.0",
    "pydantic>=2.11.0",
    "pypdf>=5.4.0",
    "python-dateutil>=2.9.0",
    "tenacity>=8.2.2",
]

[dependency-groups]
dev = [
    "bandit[toml]>=1.7.5",
    "docformatter>=1.7.5",
    "pre-commit>=3.3.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=4.0.0",
    "pytest-github-actions-annotate-failures>=0.2.0",
    "pytest-mock>=3.10.0",
    "pytest-runner>=6.0.0",
    "ruff>=0.12.0",
]

[build-system]
requires = ["uv_build>=0.10.8,<0.11.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E",
    "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.format]
preview = true

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101",
    "TRY003",
]

[tool.docformatter]
recursive = true
pre-summary-newline = true
blank = true
in-place = true
black = true
style = "google"

[tool.coverage.run]
branch = true
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 90
